--- a/docs/warp.adoc
+++ b/docs/warp.adoc
@@ -395,6 +395,42 @@ Keep in mind:
 * you should not store an reference to an field in a top-level class
 * the state of an inspection is serialized and thus its mutations on a server are not directly exposed to the client's objects
 
+
+== Debugging Warp
+
+In order to debug Warp execution effectively, one needs to know few facts:
+
+* Warp tries to provide as much as context during its failures as possible
+** if you are not provided with a context of a failure, it needs to be enhanced and should be reported
+* the client-side execution can be debugged by usual tools
+* Arquillian's debug output can reveal issues
+
+=== Arquillian Debugging Mode
+
+In order to debug the tests effectively, one can reveal their internals by switching into an Arquillian debugging mode:
+
+just pass `-Darquillian.debug=true` to the test and application server VM.
+
+It will show you event-execution tree which exposes you:
+
+* what events are happening during test execution
+* what requests/responses were registered by Warp
+* what requests/responses were inspected by Warp
+* what lifecycle hooks were hit
+
+=== Debug Warp and WebDriver
+
+In order to debug Warp's use with WebDriver, it's good approach to use developer tools/extensions provided by browsers, such as:
+
+* Chrome Developer Tools
+* Firefox Developer Tools / Firebug
+* IE 
+* Opera Dragonfly
+
+and their ability to analyze Network traffic.
+
+Refer to Graphene Reusable Session for best practices how to develop with WebDriver.
+
 == Architecture
 
 === Warp Request Processing Lifecycle
